# ai-tunes

./: .gitignore  README.md  gradle.properties  run-debug-emulator.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/aitunes/app/: ExampleInstrumentedTest.kt  ModelInferenceTimingInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/aitunes/app/: AiTunesApplication.kt
app/src/main/java/com/aitunes/app/data/local/: AiTunesDatabase.kt  NuclearMemoryCache.kt
app/src/main/java/com/aitunes/app/data/local/dao/: EpisodicMemoryDao.kt  NuclearMemoryDao.kt  SemanticMemoryDao.kt
app/src/main/java/com/aitunes/app/data/local/entity/: EpisodicMemoryEntity.kt  EpisodicMemoryFtsEntity.kt  NuclearMemoryEntity.kt  (+1 more)
app/src/main/java/com/aitunes/app/data/models/: DownloadProgressCalculator.kt  ModelManager.kt  ModelRegistry.kt
app/src/main/java/com/aitunes/app/data/repository/: ChatRepository.kt
app/src/main/java/com/aitunes/app/domain/: MessageClassifier.kt  RememberInstructionExtractor.kt  SystemPromptBuilder.kt
app/src/main/java/com/aitunes/app/domain/model/: AiAssistant.kt  ChatMessage.kt  MessageCategory.kt  SectorId.kt
app/src/main/java/com/aitunes/app/engine/: InferenceEvent.kt  LlamaEngine.kt  LlamaNativeBridge.kt  LlamaRuntimeConfig.kt  NativeTokenCallback.kt
app/src/main/java/com/aitunes/app/ui/: MainActivity.kt
app/src/main/java/com/aitunes/app/ui/chat/: ChatViewModel.kt  ChatViewModelFactory.kt  IntelligencePhase.kt
app/src/main/java/com/aitunes/app/ui/models/: ModelLibraryScreen.kt  ModelLibraryViewModel.kt  ModelLibraryViewModelFactory.kt
app/src/main/java/com/aitunes/app/ui/navigation/: AppNavigation.kt
app/src/main/java/com/aitunes/app/ui/screens/: ChatScreen.kt  HomeScreen.kt
app/src/main/java/com/aitunes/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/aitunes/app/utils/: ContextTruncator.kt  DeviceProfiler.kt  FtsQueryBuilder.kt
app/src/main/java/com/aitunes/app/workers/: DatabaseMaintenanceWorker.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/aitunes/app/: ExampleUnitTest.kt
app/src/test/java/com/aitunes/app/data/models/: DownloadProgressCalculatorTest.kt
gradle/: libs.versions.toml
scripts/: install-debug-emulator.ps1  logcat-ai-tunes.ps1  prepare-androidtest.ps1  run-model-bench-test.ps1
